--- a/blogging-app/package.json
+++ b/blogging-app/package.json
@@ -12,7 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bignumber.js": "^9.1.1",
     "ethers": "^6.3.0",
-    "kwil": "^2.0.9",
+    "luke-dev": "^2.0.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
