--- a/apps/blogging-app/package.json
+++ b/apps/blogging-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@kwilteam/kwil-js": "^0.5.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,7 +13,6 @@
     "@testing-library/user-event": "^13.5.0",
     "bignumber.js": "^9.1.1",
     "ethers": "^6.3.0",
-    "kwil": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
